--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -24,7 +24,7 @@
 //         display: flex;
 //     }
 
-//     &__navigation {
+//     &__colsigation {
 //         @include is-sp {
 //             width: 50%;
 //         }
@@ -182,10 +182,13 @@
 
 .home {
     background: rgb(95, 165, 205);
+    position: relative;
 
-    .home-nav-col1 {
+    .home-cols-col1 {
         display: flex;
         justify-content: space-between;
+        margin-bottom: 20px;
+  
     
         &-brand-logo {
             display: flex;
@@ -263,6 +266,114 @@
                     }
                 }
             }
+        }
+    }
+    .home-cols-col2 {
+        background: url(../../release/image/header/image_banner.png) no-repeat;
+        background-position: center;
+        background-size: cover;
+        display: flex;
+        height: 660px;
+        align-items: center;
+        position: relative;
+        width: 1100px;
+        margin: 0 auto;
+        padding-left: 60px;
+        overflow: hidden;
+
+        .bnnr-hdr {
+            z-index: 999;
+        }
+
+        .home-cols-col2-cntnt01 {
+            &-img {
+                margin-bottom: 13px;
+
+                img {
+                    width: 208px;
+                }
+            }
+
+            &-txt {
+                font: 700 14px/19px 'cross-platform-yu-gothic';
+                color: white;
+            }
+        }
+
+        .home-cols-col2-cntnt02 {
+            margin-left: 14px;
+
+            &-hdr {
+                color: #fff;
+
+                p:nth-child(1) {
+                    font: 500 30px/41px 'yu-mincho-pr6n', sans-serif;
+                    letter-spacing: 13px;
+                }
+
+                p:nth-child(2) {
+                    font: 10px/20px 'century-gothic', sans-serif;
+                    letter-spacing: 2.3px;
+                }
+            }
+
+            &-cont {
+                font: 700 11px/15px 'cross-platform-yu-gothic';
+                color: #fff;
+                margin-top: 20px;
+            }
+
+        }
+
+        &-side {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top:0;
+            right: 0;
+            padding-top: 19px;
+            padding-right: 11px;
+
+            &-hor {
+                font: 500 30px/41px 'yu-mincho-pr6n', sans-serif;
+                color: #fff;
+                
+                p {
+                    letter-spacing: 5px;
+                }
+            }
+
+            &-ver {
+                font: 500 30px/41px yu-mincho-pr6n, sans-serif;
+                writing-mode: tb;
+                color: #fff;
+
+                p {
+                    letter-spacing: 5px;
+                }
+            }
+        }
+        // &:after {
+        //     content:'';
+        //     background: #7C8FC2;
+        //     // clip-path: polygon(0% 0%, 79% 0%, 36.8% 100%, 0% 100%);
+        //     position: absolute;
+        //     top: -50%;
+        //     left:-50%;
+        //     width: 100%;
+        //     height: 100%;
+           
+        // }
+        &:before {
+            position: absolute;
+            top: 0;
+            left: 0;
+            content: '';
+            width: 100%;
+            height: 100%;
+            clip-path: polygon(0% 0%, 79% 0%, 36.8% 100%, 0% 100%);
+            background: linear-gradient(95deg, #0d5089, #cee5f5);
+            opacity: 0.8;
         }
     }
 }
