--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -187,7 +187,12 @@
     .home-cols-col1 {
         display: flex;
         justify-content: space-between;
-        margin-bottom: 20px;
+        z-index: 2;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 999;
   
     
         &-brand-logo {
@@ -280,6 +285,8 @@
         margin: 0 auto;
         padding-left: 60px;
         overflow: hidden;
+        margin-top: 97px;
+        z-index: 7;
 
         .bnnr-hdr {
             z-index: 999;
@@ -353,17 +360,6 @@
                 }
             }
         }
-        // &:after {
-        //     content:'';
-        //     background: #7C8FC2;
-        //     // clip-path: polygon(0% 0%, 79% 0%, 36.8% 100%, 0% 100%);
-        //     position: absolute;
-        //     top: -50%;
-        //     left:-50%;
-        //     width: 100%;
-        //     height: 100%;
-           
-        // }
         &:before {
             position: absolute;
             top: 0;
@@ -376,4 +372,23 @@
             opacity: 0.8;
         }
     }
+    &:after {
+        position: absolute;
+        content: '';
+        top: -97px;
+        right: 0;
+        width: 800px;
+        height: 250px;
+        clip-path: inset(0 0 0 0);
+        background: linear-gradient(#2579BF,#2593D5);
+    }
+
+    // &-bg {
+    //     width: 800px;
+    //     height: 250px;
+    //     background: linear-gradient(#2579bf, #2593d5);
+    //     position: absolute;
+    //     top: 0;
+    //     right: 0;
+    // }
 }
