--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -44,5 +44,5 @@
 @import "object/component/**/*";
 @import "object/project/**/*";
 @import "object/utility/**/*";
-
+@import "pages/*";
 @import "sections/**/*";
