--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,34 +7,34 @@
     layout
         > header/main/sidebar/footer
         > define styles for large container
-        
-        *note : 
+
+        *note :
             > container : width & height , padding , margin
             > usage : header , main , sidebar(side nav) , footer
     object
         >component
             > button, card, stamp, seal
             > good for small repepetive class
-            
-            *note : 
+
+            *note :
                 > button , card, table, typography, list, badge
         >project
             > Component that is unique to a page
-             *note : 
+             *note :
                 > forms , promotion, article list, pagination
 
         >utility
             > for minor changes
-            
+
             *note :
                 > width , font-size, color, margin , padding
-    
+
     page
         > modify/edit some styles in object and layout
-        
+
         *note :
             > to minimize messing up with global styles
-    
+
     style.scss
         > compile all scss file
 */
@@ -46,3 +46,4 @@
 @import "object/utility/**/*";
 
 @import "sections/**/*";
+@import "pages/**/*";
