change:update message sec1 and 2

--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -353,6 +353,8 @@
 	align-items: center;
 	justify-content: center;
 	position: relative;
+	background-color: #fff;
+	z-index: 777;
 
 	@include is-sp {
 		width: 100%;
